--- a/index.html
+++ b/index.html
@@ -12,18 +12,39 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="./style/style.css"/>
+    <script defer src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script defer src="script.js"></script>
 </head>
 <body>
+    <section id="navigation">
+        <nav class="navbar navbar-expand-lg navbar-dark">
+            <div class="container">
+              <a class="navbar-brand" href="#">OpenWeather</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarOffcanvas" aria-controls="navbarOffcanvas">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-start" tabindex="-1" id="navbarOffcanvas" aria-labelledby="navbarOffcanvasLabel">
+                <div class="offcanvas-header">
+                  <h2 class="offcanvas-title" id="navbarOffcanvasLabel">Villes favorites <i class="fa-solid fa-location-dot"></i></h2>
+                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                  <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  </ul>
+                </div>
+              </div>
+            </div>
+        </nav>
+    </section>
     <section id="top-banner">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8 col-lg-6 col-xl-4">
                     <form class="city-form">
                         <div class="form-field">
-                            <input type="text" value="Liège" placeholder="Entrez une ville">
+                            <input type="text" value="" placeholder="Entrez une ville">
                             <button type="submit">Envoyer</button>
                         </div>
                         <span class="no-city-error"></span>
@@ -35,7 +56,7 @@
     <section id="main-weather">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-12 col-lg-10 col-xl-8">
+                <div class="col-12">
                     <div class="main"></div>
                     <div class="hourly-weather"></div>
                     <div class="details text-center"></div>
